write swagger doc for fetch feq
